--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 header {
     background-color: #6a0dad;
-    padding: 20px;
+    padding: 70px;
     border-bottom: 2px solid #d4af37;
     display: flex;
     align-items: center;
@@ -23,9 +23,9 @@ header {
 
 header .logo {
     position: absolute;
-    left: 20px;
-    width: 30px;
-    height: 30px;
+    top: 10px;
+    width: 50px;
+    height: 50px;
 }
 
 header .title {
